💄 Fix layout shift when reaching max characters

--- a/components/input/Input.module.css
+++ b/components/input/Input.module.css
@@ -3,6 +3,8 @@
   grid-auto-flow: row;
   row-gap: 1em;
   justify-items: end;
+  align-items: start;
+  min-height: 105px;
 }
 
 .input {
